import React, {Component} from 'react';
import {createAppContainer} from 'react-navigation';
import {createBottomTabNavigator} from 'react-navigation-tabs';
import Icon from 'react-native-vector-icons/MaterialCommunityIcons';
import Home from './screens/Home';
import PictureView from './screens/PictureView';
import Forms from './screens/Forms';
import Login from './screens/Login';
import Swipe from './screens/Swipe';

const TabNavigator = createBottomTabNavigator(
  {
    Home: {
...
